# Readify

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: windows-build.yml
src/: MainFrame.cpp  MainFrame.h  ReadifyApp.cpp  ReadifyApp.h
